--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,6 +34,7 @@ target_sources(trkLibrary PRIVATE
     "${CMAKE_SOURCE_DIR}/sources/trk/Crashes.cpp"
     "${CMAKE_SOURCE_DIR}/sources/trk/Demo.cpp"
     "${CMAKE_SOURCE_DIR}/sources/trk/PrivateDemo.cpp"
+    "${CMAKE_SOURCE_DIR}/sources/trk/StandardError.cpp"
 )
 
 #-------------------------------------------------------------------------------
