Refactor with `sources` directory

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -67,8 +67,8 @@ function(tomurcukDefinePackage MODULE_NAME PACKAGE_NAME)
     endif()
 
     set(TARGET_NAME "package${MODULE_NAME}${PACKAGE_NAME}")
-    list(TRANSFORM PARSE_SOURCES PREPEND "${CMAKE_SOURCE_DIR}/private/${MODULE_NAME}/${PACKAGE_NAME}/")
-    list(TRANSFORM PARSE_WINDOWS_SOURCES PREPEND "${CMAKE_SOURCE_DIR}/private/${MODULE_NAME}/${PACKAGE_NAME}/windows/")
+    list(TRANSFORM PARSE_SOURCES PREPEND "${CMAKE_SOURCE_DIR}/sources/private/${MODULE_NAME}/${PACKAGE_NAME}/")
+    list(TRANSFORM PARSE_WINDOWS_SOURCES PREPEND "${CMAKE_SOURCE_DIR}/sources/private/${MODULE_NAME}/${PACKAGE_NAME}/windows/")
     list(TRANSFORM PARSE_MODULE_DEPENDENCIES PREPEND "module")
     list(TRANSFORM PARSE_TARGET_DEPENDENCIES PREPEND "target")
 
@@ -81,11 +81,11 @@ function(tomurcukDefinePackage MODULE_NAME PACKAGE_NAME)
     if(PARSE_SOURCES)
         add_library(${TARGET_NAME} EXCLUDE_FROM_ALL ${PARSE_SOURCES})
         target_compile_options(${TARGET_NAME} PRIVATE ${TOMURCUK_COMPILE_OPTIONS})
-        target_include_directories(${TARGET_NAME} PUBLIC "${CMAKE_SOURCE_DIR}/public")
+        target_include_directories(${TARGET_NAME} PUBLIC "${CMAKE_SOURCE_DIR}/sources/public")
         target_link_libraries(${TARGET_NAME} PRIVATE ${PARSE_MODULE_DEPENDENCIES} ${PARSE_TARGET_DEPENDENCIES})
     else()
         add_library(${TARGET_NAME} INTERFACE EXCLUDE_FROM_ALL)
-        target_include_directories(${TARGET_NAME} INTERFACE "${CMAKE_SOURCE_DIR}/public")
+        target_include_directories(${TARGET_NAME} INTERFACE "${CMAKE_SOURCE_DIR}/sources/public")
         target_link_libraries(${TARGET_NAME} INTERFACE ${PARSE_MODULE_DEPENDENCIES} ${PARSE_TARGET_DEPENDENCIES})
     endif()
 endfunction()
@@ -112,7 +112,7 @@ function(tomurcukDefineModule MODULE_NAME)
     list(TRANSFORM PARSE_TARGET_DEPENDENCIES PREPEND "target")
 
     if(PARSE_EXECUTABLE)
-        add_executable(${TARGET_NAME} EXCLUDE_FROM_ALL "${CMAKE_SOURCE_DIR}/private/${MODULE_NAME}/main.cpp")
+        add_executable(${TARGET_NAME} EXCLUDE_FROM_ALL "${CMAKE_SOURCE_DIR}/sources/private/${MODULE_NAME}/main.cpp")
         target_compile_options(${TARGET_NAME} PRIVATE ${TOMURCUK_COMPILE_OPTIONS})
         target_link_libraries(${TARGET_NAME} PRIVATE ${PARSE_PACKAGES} ${PARSE_MODULE_DEPENDENCIES} ${PARSE_TARGET_DEPENDENCIES})
     else()
