Refactor physical structure with packages

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,9 +12,7 @@ else()
     message(FATAL_ERROR "Unsupported system name: ${CMAKE_SYSTEM_NAME}")
 endif()
 
-set(TOMURCUK_SOURCE_DIRECTORY "${CMAKE_SOURCE_DIR}/sources")
-set(TOMURCUK_PRIVATE_SOURCE_DIRECTORY "${TOMURCUK_SOURCE_DIRECTORY}/private")
-set(TOMURCUK_PUBLIC_SOURCE_DIRECTORY "${TOMURCUK_SOURCE_DIRECTORY}/public")
+set(TOMURCUK_PACKAGE_DIRECTORY "${CMAKE_SOURCE_DIR}/packages")
 
 #-------------------------------------------------------------------------------
 # Dependency: greatest
@@ -46,6 +44,7 @@ if (CMAKE_CXX_COMPILER_FRONTEND_VARIANT STREQUAL "GNU")
         "-Wno-c++98-compat"
         "-Wno-c++98-compat-pedantic"
         "-Wno-deprecated-declarations"
+        "-Wno-missing-include-dirs"
         "-Wno-old-style-cast"
         "-Wno-reserved-macro-identifier"
         "-Wno-unsafe-buffer-usage"
@@ -60,10 +59,10 @@ endif()
 #-------------------------------------------------------------------------------
 # Helper function for defining targets
 
-function(tomurcukDefineModule MODULE_NAME)
+function(tomurcukDefinePackage PACKAGE_NAME)
     set(OPTIONS "")
     set(ONE_VALUE_ARGS "")
-    set(MULTI_VALUE_ARGS MODULE_DEPENDENCIES CUSTOM_DEPENDENCIES)
+    set(MULTI_VALUE_ARGS PACKAGE_DEPENDENCIES TRANSITIVE_PACKAGE_DEPENDENCIES CUSTOM_DEPENDENCIES TRANSITIVE_CUSTOM_DEPENDENCIES)
     cmake_parse_arguments(PARSE "${OPTIONS}" "${ONE_VALUE_ARGS}" "${MULTI_VALUE_ARGS}" ${ARGN}) # cSpell: disable-line
 
     foreach(i ${MULTI_VALUE_ARGS})
@@ -73,98 +72,62 @@ function(tomurcukDefineModule MODULE_NAME)
     endforeach()
 
     if(PARSE_UNPARSED_ARGUMENTS)
-        message(FATAL_ERROR "Unknown arguments in tomurcukDefineModule: ${PARSE_UNPARSED_ARGUMENTS}")
+        message(FATAL_ERROR "Unknown arguments in tomurcukDefinePackage: ${PARSE_UNPARSED_ARGUMENTS}")
     endif()
 
-    set(MODULE_TARGET_NAME "tomurcukModule_${MODULE_NAME}")
-    list(TRANSFORM PARSE_MODULE_DEPENDENCIES PREPEND "tomurcukModule_")
+    set(PACKAGE_TARGET_NAME "tomurcukPackage_${PACKAGE_NAME}")
+    list(TRANSFORM PARSE_PACKAGE_DEPENDENCIES PREPEND "tomurcukPackage_")
+    list(TRANSFORM PARSE_TRANSITIVE_PACKAGE_DEPENDENCIES PREPEND "tomurcukPackage_")
     list(TRANSFORM PARSE_CUSTOM_DEPENDENCIES PREPEND "tomurcukCustom_")
-    set(MODULE_PRIVATE_SOURCE_DIRECTORY "${TOMURCUK_PRIVATE_SOURCE_DIRECTORY}/${MODULE_NAME}")
-    set(MODULE_PUBLIC_SOURCE_DIRECTORY "${TOMURCUK_PUBLIC_SOURCE_DIRECTORY}/${MODULE_NAME}")
-    set(MODULE_ENTRYPOINT "${MODULE_PRIVATE_SOURCE_DIRECTORY}/main.cpp")
+    list(TRANSFORM PARSE_TRANSITIVE_CUSTOM_DEPENDENCIES PREPEND "tomurcukCustom_")
+    set(PACKAGE_DIRECTORY "${TOMURCUK_PACKAGE_DIRECTORY}/${PACKAGE_NAME}")
+    set(PACKAGE_PRIVATE_DIRECTORY "${PACKAGE_DIRECTORY}/private")
+    set(PACKAGE_PUBLIC_DIRECTORY "${PACKAGE_DIRECTORY}/public")
+    set(PACKAGE_PLATFORM_DIRECTORY "${PACKAGE_DIRECTORY}/${TOMURCUK_PLATFORM_NAME}")
+    set(PACKAGE_ENTRYPOINT_FILE "${PACKAGE_DIRECTORY}/main.cpp")
 
-    set(MODULE_PACKAGE_TARGET_NAMES "")
+    file(GLOB PACKAGE_HEADER_FILES CONFIGURE_DEPENDS
+        "${PACKAGE_PRIVATE_DIRECTORY}/tomurcuk/*.hpp"
+        "${PACKAGE_PUBLIC_DIRECTORY}/tomurcuk/*.hpp"
+        "${PACKAGE_PLATFORM_DIRECTORY}/tomurcuk/*.hpp"
+    )
+    file(GLOB PACKAGE_IMPLEMENTATION_FILES CONFIGURE_DEPENDS
+        "${PACKAGE_PRIVATE_DIRECTORY}/tomurcuk/*.cpp"
+        "${PACKAGE_PLATFORM_DIRECTORY}/tomurcuk/*.cpp"
+    )
 
-    file(GLOB PRIVATE_ORIGINATED_PACKAGE_NAMES RELATIVE ${MODULE_PRIVATE_SOURCE_DIRECTORY} CONFIGURE_DEPENDS "${MODULE_PRIVATE_SOURCE_DIRECTORY}/*")
-    foreach(PACKAGE_NAME ${PRIVATE_ORIGINATED_PACKAGE_NAMES})
-        set(PACKAGE_PRIVATE_SOURCE_DIRECTORY "${MODULE_PRIVATE_SOURCE_DIRECTORY}/${PACKAGE_NAME}")
-        if(NOT IS_DIRECTORY ${PACKAGE_PRIVATE_SOURCE_DIRECTORY})
-            continue()
-        endif()
-        set(PACKAGE_TARGET_NAME "tomurcukPackage_${MODULE_NAME}__${PACKAGE_NAME}")
-        set(PACKAGE_PUBLIC_SOURCE_DIRECTORY "${MODULE_PUBLIC_SOURCE_DIRECTORY}/${PACKAGE_NAME}")
-        set(PACKAGE_PRIVATE_PLATFORM_SOURCE_DIRECTORY "${PACKAGE_PRIVATE_SOURCE_DIRECTORY}/${TOMURCUK_PLATFORM_NAME}")
-        set(PACKAGE_PUBLIC_PLATFORM_SOURCE_DIRECTORY "${PACKAGE_PUBLIC_SOURCE_DIRECTORY}/${TOMURCUK_PLATFORM_NAME}")
-        file(GLOB PACKAGE_HEADER_SOURCES CONFIGURE_DEPENDS
-            "${PACKAGE_PRIVATE_SOURCE_DIRECTORY}/*.hpp"
-            "${PACKAGE_PUBLIC_SOURCE_DIRECTORY}/*.hpp"
-            "${PACKAGE_PRIVATE_PLATFORM_SOURCE_DIRECTORY}/*.hpp"
-            "${PACKAGE_PUBLIC_PLATFORM_SOURCE_DIRECTORY}/*.hpp"
-        )
-        file(GLOB PACKAGE_IMPLEMENTATION_SOURCES CONFIGURE_DEPENDS
-            "${PACKAGE_PRIVATE_SOURCE_DIRECTORY}/*.cpp"
-            "${PACKAGE_PRIVATE_PLATFORM_SOURCE_DIRECTORY}/*.cpp"
-        )
-
-        if(PACKAGE_IMPLEMENTATION_SOURCES)
-            add_library(${PACKAGE_TARGET_NAME} EXCLUDE_FROM_ALL ${PACKAGE_HEADER_SOURCES} ${PACKAGE_IMPLEMENTATION_SOURCES})
-            target_compile_options(${PACKAGE_TARGET_NAME} PRIVATE ${TOMURCUK_COMPILE_OPTIONS})
-            target_include_directories(${PACKAGE_TARGET_NAME} PUBLIC ${TOMURCUK_PUBLIC_SOURCE_DIRECTORY})
-            target_link_libraries(${PACKAGE_TARGET_NAME} PRIVATE ${PARSE_MODULE_DEPENDENCIES} ${PARSE_CUSTOM_DEPENDENCIES})
-        else()
-            add_library(${PACKAGE_TARGET_NAME} INTERFACE EXCLUDE_FROM_ALL ${PACKAGE_HEADER_SOURCES})
-            target_include_directories(${PACKAGE_TARGET_NAME} INTERFACE ${TOMURCUK_PUBLIC_SOURCE_DIRECTORY})
-            target_link_libraries(${PACKAGE_TARGET_NAME} INTERFACE ${PARSE_MODULE_DEPENDENCIES} ${PARSE_CUSTOM_DEPENDENCIES})
-        endif()
-
-        list(APPEND MODULE_PACKAGE_TARGET_NAMES ${PACKAGE_TARGET_NAME})
-    endforeach()
-
-    file(GLOB PUBLIC_ORIGINATED_PACKAGE_NAMES RELATIVE ${MODULE_PUBLIC_SOURCE_DIRECTORY} CONFIGURE_DEPENDS "${MODULE_PUBLIC_SOURCE_DIRECTORY}/*")
-    foreach(PACKAGE_NAME ${PUBLIC_ORIGINATED_PACKAGE_NAMES})
-        set(PACKAGE_PUBLIC_SOURCE_DIRECTORY "${MODULE_PUBLIC_SOURCE_DIRECTORY}/${PACKAGE_NAME}")
-        if(NOT IS_DIRECTORY ${PACKAGE_PUBLIC_SOURCE_DIRECTORY})
-            continue()
-        endif()
-        set(PACKAGE_PRIVATE_SOURCE_DIRECTORY "${MODULE_PRIVATE_SOURCE_DIRECTORY}/${PACKAGE_NAME}")
-        if(IS_DIRECTORY ${PACKAGE_PRIVATE_SOURCE_DIRECTORY})
-            continue()
-        endif()
-        set(PACKAGE_TARGET_NAME "tomurcukPackage_${MODULE_NAME}__${PACKAGE_NAME}")
-        set(PACKAGE_PUBLIC_PLATFORM_SOURCE_DIRECTORY "${PACKAGE_PUBLIC_SOURCE_DIRECTORY}/${TOMURCUK_PLATFORM_NAME}")
-        file(GLOB PACKAGE_HEADER_SOURCES CONFIGURE_DEPENDS
-            "${PACKAGE_PUBLIC_SOURCE_DIRECTORY}/*.hpp"
-            "${PACKAGE_PUBLIC_PLATFORM_SOURCE_DIRECTORY}/*.hpp"
-        )
-
-        add_library(${PACKAGE_TARGET_NAME} INTERFACE EXCLUDE_FROM_ALL ${PACKAGE_HEADER_SOURCES})
-        target_include_directories(${PACKAGE_TARGET_NAME} INTERFACE ${TOMURCUK_PUBLIC_SOURCE_DIRECTORY})
-        target_link_libraries(${PACKAGE_TARGET_NAME} INTERFACE ${PARSE_MODULE_DEPENDENCIES} ${PARSE_CUSTOM_DEPENDENCIES})
-
-        list(APPEND MODULE_PACKAGE_TARGET_NAMES ${PACKAGE_TARGET_NAME})
-    endforeach()
-
-    if(EXISTS ${MODULE_ENTRYPOINT} AND NOT IS_DIRECTORY ${MODULE_ENTRYPOINT})
-        add_executable(${MODULE_TARGET_NAME} EXCLUDE_FROM_ALL ${MODULE_ENTRYPOINT})
-        target_compile_options(${MODULE_TARGET_NAME} PRIVATE ${TOMURCUK_COMPILE_OPTIONS})
-        target_link_libraries(${MODULE_TARGET_NAME} PRIVATE ${MODULE_PACKAGE_TARGET_NAMES} ${PARSE_MODULE_DEPENDENCIES} ${PARSE_CUSTOM_DEPENDENCIES})
+    if (EXISTS ${PACKAGE_ENTRYPOINT_FILE} AND NOT IS_DIRECTORY ${PACKAGE_ENTRYPOINT_FILE})
+        add_executable(${PACKAGE_TARGET_NAME} EXCLUDE_FROM_ALL ${PACKAGE_HEADER_FILES} ${PACKAGE_IMPLEMENTATION_FILES} ${PACKAGE_ENTRYPOINT_FILE})
+        target_compile_options(${PACKAGE_TARGET_NAME} PRIVATE ${TOMURCUK_COMPILE_OPTIONS})
+        target_link_libraries(${PACKAGE_TARGET_NAME} PRIVATE ${PARSE_PACKAGE_DEPENDENCIES} ${PARSE_CUSTOM_DEPENDENCIES} PUBLIC ${PARSE_TRANSITIVE_PACKAGE_DEPENDENCIES} ${PARSE_TRANSITIVE_CUSTOM_DEPENDENCIES})
+        target_include_directories(${PACKAGE_TARGET_NAME} PRIVATE ${PACKAGE_PRIVATE_DIRECTORY} ${PACKAGE_PLATFORM_DIRECTORY} PUBLIC ${PACKAGE_PUBLIC_DIRECTORY})
+    elseif(PACKAGE_IMPLEMENTATION_FILES)
+        add_library(${PACKAGE_TARGET_NAME} EXCLUDE_FROM_ALL ${PACKAGE_HEADER_FILES} ${PACKAGE_IMPLEMENTATION_FILES})
+        target_compile_options(${PACKAGE_TARGET_NAME} PRIVATE ${TOMURCUK_COMPILE_OPTIONS})
+        target_link_libraries(${PACKAGE_TARGET_NAME} PRIVATE ${PARSE_PACKAGE_DEPENDENCIES} ${PARSE_CUSTOM_DEPENDENCIES} PUBLIC ${PARSE_TRANSITIVE_PACKAGE_DEPENDENCIES} ${PARSE_TRANSITIVE_CUSTOM_DEPENDENCIES})
+        target_include_directories(${PACKAGE_TARGET_NAME} PRIVATE ${PACKAGE_PRIVATE_DIRECTORY} ${PACKAGE_PLATFORM_DIRECTORY} PUBLIC ${PACKAGE_PUBLIC_DIRECTORY})
     else()
-        add_library(${MODULE_TARGET_NAME} INTERFACE EXCLUDE_FROM_ALL)
-        target_link_libraries(${MODULE_TARGET_NAME} INTERFACE ${MODULE_PACKAGE_TARGET_NAMES} ${PARSE_MODULE_DEPENDENCIES} ${PARSE_CUSTOM_DEPENDENCIES})
+        add_library(${PACKAGE_TARGET_NAME} INTERFACE EXCLUDE_FROM_ALL ${PACKAGE_HEADER_FILES})
+        target_link_libraries(${PACKAGE_TARGET_NAME} INTERFACE ${PARSE_TRANSITIVE_PACKAGE_DEPENDENCIES} ${PARSE_TRANSITIVE_CUSTOM_DEPENDENCIES})
+        target_include_directories(${PACKAGE_TARGET_NAME} INTERFACE ${PACKAGE_PUBLIC_DIRECTORY})
     endif()
 endfunction()
 
 #-------------------------------------------------------------------------------
 # The library
 
-tomurcukDefineModule(tomurcuk)
+tomurcukDefinePackage(status)
 
-#-------------------------------------------------------------------------------
-# Tests for the library
+tomurcukDefinePackage(memory)
 
-tomurcukDefineModule(tomurcukTest
-    MODULE_DEPENDENCIES
-        tomurcuk
+tomurcukDefinePackage(data
+    TRANSITIVE_PACKAGE_DEPENDENCIES
+        memory
+)
+
+tomurcukDefinePackage(test
+    PACKAGE_DEPENDENCIES
+        memory
     CUSTOM_DEPENDENCIES
         greatest
 )
